# KenBun

./: .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json
src/: guide.html  index.html  log.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: close-guide-window.json  get-bun-version.json  get-log-history.json  get-project-name.json  get-project-path.json  open-browser.json  open-guide-window.json  open-log-window.json  set-project-path.json  start-bun.json  stop-bun.json  update-tray-menu.json  verify-project.json
src-tauri/src/: main.rs
