[package]
name = "ken"
version = "1.1.0"
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.22"
muda = "0.17"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
regex = "1"
urlencoding = "2"

# Windows: sembunyikan console window saat release
[target.'cfg(windows)'.dependencies]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
